<resources>
    <string name="app_name">My Financial Assistant</string>
    <string name="app_name_short">MyFA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_income">Income</string>
    <string name="menu_expense">Expense</string>
    <string name="menu_budget">Budget</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="account">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="setup_header">Setup</string>
    <string name="miscellaneous_header">Mscellaneous</string>
    <string name="category_title">Category</string>
    <string name="budget_title">Budget</string>
    <string name="budget_setting_subtitle">Create/Update your monthly budget</string>
    <string name="create_new_category">Create new category</string>
    <string name="title_activity_budget">BudgetActivity</string>
    <string name="budget_name">Budget Name</string>
    <string name="zero">0</string>
    <string name="label">Label</string>
    <string name="enter_label">Enter Label</string>
    <string name="enter_value">Enter Value</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="required">Required</string>
    <string name="add_budget">Add Budget</string>
    <string name="save">Save</string>
    <string name="budget_already_exist">Budget already exist</string>
    <string name="close">Close</string>
    <string name="new_budget_has_been_added">New Budget has been added</string>
    <string name="budget_has_been_updated">Budget has been updated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_budget_question">Delete Budget?</string>
    <string name="budget_deleted">Budget deleted</string>
    <string name="salary_deduction">Salary Deduction</string>
    <string name="salary_deduction_subtitle">Tax, SSS, GSIS, Pag-ibig, PhilHealth, etc.</string>
    <string name="title_activity_setup_salary_deduction">SetupSalaryDeductionActivity</string>
    <string name="setup_salary_deduction">Setup Salary Deduction</string>
    <string name="clicked">Clicked</string>
    <string name="deduction_name">Deduction Name</string>
    <string name="salary_deduction_already_exist">Salary Deduction already exist</string>
    <string name="add_salary_deduction">Add Salary Deduction</string>
    <string name="new_salary_deduction">New Salary Deduction</string>
    <string name="new_deduction">New Deduction</string>
    <string name="updated_deduction">Updated Deduction</string>
    <string name="deduction_updated">Deduction updated</string>
    <string name="deduction_added">Deduction added</string>
    <string name="deduction_deleted">Deduction deleted</string>
    <string name="budget_updated">Budget updated</string>
    <string name="budget_added">Budget added</string>
    <string name="title_activity_setup_category">SetupCategory</string>
    <string name="setup_category">Setup Category</string>
    <string name="category_name">Category Name</string>
    <string name="category_already_exist">Category already exist</string>
    <string name="category_added">Category added</string>
    <string name="category_updated">Category updated</string>
    <string name="delete_category_question">Delete Category?</string>
    <string name="category_deleted">Category deleted</string>
    <string name="new_category">New Category</string>
    <string name="failed_to_save">Failed to save</string>
    <string name="invalid_input">Invalid input</string>
    <string name="facebook_app_id">401891194032697</string>
    <string name="fb_login_protocol_scheme">fb401891194032697</string>
    <string-array name="food">
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Fast Food</item>
        <item>Work Meals</item>
        <item>Meal Service</item>
        <item>Children’s hot school lunches</item>
        <item>Coffee Shops</item>
        <item>Alcohol</item>
    </string-array>
    <string-array name="taxes">
        <item>Federal Income</item>
        <item>State</item>
        <item>Property</item>
        <item>Business</item>
        <item>Accountant Fees</item>
        <item>Filing Fees</item>
    </string-array>
    <string-array name="transportation">
        <item>Auto loan</item>
        <item>Registration</item>
        <item>Gas</item>
        <item>Road/Bridge toll</item>
        <item>Auto maintenance</item>
        <item>Tires</item>
        <item>Larger service (brakes, fluids, etc.)</item>
        <item>Auto repair (estimate based on make/model/year of car)</item>
        <item>Public transportation</item>
        <item>Parking</item>
        <item>Roadside assistance (onstar)</item>
        <item>Other forms of transportation and associated maintenance (bike, motorcycle, recreation vehicles)</item>
    </string-array>
    <string-array name="housing">
        <item>Mortgage</item>
        <item>Rent</item>
        <item>Home insurance</item>
        <item>Property tax</item>
        <item>HOA</item>
        <item>Home Maintenance</item>
        <item>Home Improvement</item>
        <item>Home Security</item>
    </string-array>
    <string-array name="health_care">
        <item>Copays</item>
        <item>Doctor’s office visits</item>
        <item>Specialty care</item>
        <item>Mental health visits</item>
        <item>Dental care</item>
        <item>Vision care</item>
        <item>Prescriptions</item>
        <item>Over the counter medications</item>
        <item>Vitamins/ supplements</item>
    </string-array>
    <string name="savings">Savings</string>
    <string-array name="insurance">
        <item>SSS (PH)</item>
        <item>PhilHealth (PH)</item>
        <item>GSIS (PH)</item>
        <item>Medical</item>
        <item>Dental</item>
        <item>Vision</item>
        <item>Health Savings Account (HSA)</item>
        <item>Flexible Spending Account (FSA) for health or childcare</item>
        <item>Home</item>
        <item>Private mortgage insurance</item>
        <item>Personal property (valuables)</item>
        <item>Renters</item>
        <item>Pet</item>
        <item>Auto</item>
        <item>Life</item>
        <item>Disability</item>
        <item>Long-term care</item>
    </string-array>
    <string-array name="services_membership">
        <item>Yard care</item>
        <item>House cleaning service</item>
        <item>Meal delivery services</item>
        <item>Gym</item>
        <item>Magazines</item>
        <item>Professional society dues</item>
        <item>Music (spotify/pandora etc.)</item>
        <item>TV streaming services (HULU, Netflix, etc.)</item>
        <item>Amazon Prime</item>
        <item>Costco</item>
        <item>Software subscriptions</item>
        <item>Identity theft</item>
    </string-array>
    <string-array name="child_expenses">
        <item>Childcare</item>
        <item>School tuition</item>
        <item>After school activities</item>
        <item>Sports</item>
        <item>Sports - Gear and clothing</item>
        <item>Sports - Sign up</item>
        <item>Sports - Travel</item>
        <item>Summer camps</item>
        <item>Toys</item>
        <item>Allowance</item>
        <item>Diapers/bottles/etc.</item>
        <item>School supplies</item>
        <item>Child support</item>
    </string-array>
    <string-array name="home_supplies">
        <item>Cleaning supplies</item>
        <item>General household supplies</item>
        <item>Office products</item>
        <item>Furniture</item>
        <item>Bedding/decor</item>
        <item>Pool/yard care</item>
        <item>Tools</item>
    </string-array>
    <string-array name="utilities">
        <item>Electric</item>
        <item>Gas</item>
        <item>Phone</item>
        <item>Cable</item>
        <item>Internet</item>
        <item>Water</item>
        <item>Sewer</item>
        <item>Trash</item>
        <item>Recycling</item>
        <item>Yard waste</item>
    </string-array>
    <string-array name="personal_care">
        <item>Haircuts</item>
        <item>Hair color</item>
        <item>Nail salon</item>
        <item>Massage/Spa</item>
        <item>Beauty products</item>
        <item>Acupuncture</item>
    </string-array>
    <string-array name="fun">
        <item>Going out</item>
        <item>Events</item>
        <item>Travel</item>
        <item>Hobbies</item>
        <item>Hosting/entertaining</item>
        <item>Books</item>
        <item>New technology</item>
    </string-array>
    <string-array name="pets">
        <item>Food</item>
        <item>Veterinary care</item>
        <item>Medications</item>
        <item>Bedding</item>
        <item>Toys</item>
        <item>Daycare</item>
        <item>Pet sitter/dog walking</item>
    </string-array>
    <string-array name="clothes">
        <item>New clothes</item>
        <item>School clothes</item>
        <item>Professional clothes</item>
        <item>Uniform</item>
        <item>Dry cleaning</item>
    </string-array>
    <string-array name="consumer_debt">
        <item>Interest payments</item>
        <item>Additional payments beyond minimum due</item>
    </string-array>
    <string-array name="giving">
        <item>Charities</item>
        <item>Church</item>
        <item>Political</item>
    </string-array>
    <string-array name="expense_category">
        <item>Food</item>
        <item>Taxes</item>
        <item>Transportation</item>
        <item>Housing</item>
        <item>Health Care</item>
        <item>Savings</item>
        <item>Insurance</item>
        <item>Services/Membership</item>
        <item>Child Expenses</item>
        <item>Home Supplies</item>
        <item>Utilities</item>
        <item>Personal Care</item>
        <item>Fun</item>
        <item>Pets</item>
        <item>Clothes</item>
        <item>Consumer Debt</item>
        <item>Giving</item>
    </string-array>
    <string-array name="income_category">
        <item>Basic Salary</item>
        <item>Overtime</item>
        <item>Holiday</item>
        <item>Allowance</item>
        <item>Bonuses</item>
        <item>Investment Income</item>
        <item>W2 Income</item>
        <item>Spousal Support</item>
        <item>Child Support</item>
        <item>Social Security Benefits</item>
        <item>Side Hustle Income</item>
        <item>Reimbursed Job Expenses</item>
        <item>Tips</item>
        <item>Gifts</item>
    </string-array>
    <string name="title_activity_income">IncomeActivity</string>
    <string name="image">Image</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="income_name">Income Name</string>
    <string name="paid_to">Paid To</string>
    <string name="expense_name">Expense Name</string>
    <string name="menu_category">Category</string>
    <string name="signin">Sign-In</string>
    <string name="sign_in_opening_statement">From here on, I will be your Financial Assistant.</string>
    <string name="hi_there">Hi there!</string>
    <string name="to_continue">Sign-up/Login to continue.</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
</resources>