<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_action_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_action_income"
            android:title="@string/menu_income" />
        <item
            android:id="@+id/nav_expense"
            android:icon="@drawable/ic_action_expense"
            android:title="@string/menu_expense" />
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_action_budget"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_action_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:visible="false"
            android:title="@string/menu_settings" />
    </group>

    <!--<item android:title="@string/account">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_profile"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="@string/menu_profile" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
