<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_15_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/setup_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setup_header"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/text_h6"
            app:layout_constraintStart_toStartOf="@+id/guideline_15_percent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category_title"
            android:textSize="@dimen/text_h6"
            app:layout_constraintStart_toStartOf="@+id/guideline_15_percent"
            app:layout_constraintTop_toBottomOf="@+id/setup_header" />

        <TextView
            android:id="@+id/txt_category_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_category"
            android:textSize="@dimen/text_subtitle_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_15_percent"
            app:layout_constraintTop_toBottomOf="@+id/txt_category" />

        <TextView
            android:id="@+id/txt_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/budget_title"
            android:textSize="@dimen/text_h6"
            app:layout_constraintStart_toStartOf="@+id/guideline_15_percent"
            app:layout_constraintTop_toBottomOf="@+id/txt_category_subtitle" />

        <TextView
            android:id="@+id/txt_budget_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_setting_subtitle"
            android:textSize="@dimen/text_subtitle_2"
            app:layout_constraintStart_toStartOf="@+id/guideline_15_percent"
            app:layout_constraintTop_toBottomOf="@+id/txt_budget" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>