<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dp1"
    android:paddingBottom="@dimen/dp1"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_light_blue_300">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/dp42"
                android:layout_height="@dimen/dp42"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:padding="@dimen/dp4"
                android:contentDescription="@string/image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_dollar_48dp"
                android:tint="@color/md_light_blue_300"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintCircleRadius="@dimen/dp8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_income_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/income_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subtitle_1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txt_income_amount"
                app:layout_constraintEnd_toStartOf="@+id/ibtn_update"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_income_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/text_subtitle_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ibtn_update"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/txt_income_name"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/ibtn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                android:padding="@dimen/dp8"
                android:contentDescription="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_delete_18dp_no_padding" />

            <ImageButton
                android:id="@+id/ibtn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/transparent"
                android:padding="@dimen/dp8"
                android:contentDescription="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ibtn_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_18dp_no_padding" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>